objects/Centro__Action__e.object
<CustomObject>
    <fields>
        <fullName>Centro__API_Name__c</fullName>
        <label>API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__ChannelId__c</fullName>
        <label>ChannelId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__InterviewGuid__c</fullName>
        <label>InterviewGuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__Slack_Username__c</fullName>
        <label>Slack Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__UserId__c</fullName>
        <label>Slack Member Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Centro Action</label>
    <pluralLabel>Centro Actions</pluralLabel>
</CustomObject>